# catinthegarden

./: .gitignore  AGENTS.md  Cargo.toml  PLANET_SIM_HANDOFF.md
assets/: README.md
crates/app/: Cargo.toml
crates/app/scenarios/: descent_to_10m.json  ground_to_orbit.json  limb_atmosphere.json  low_flight_performance.json  night_side_atmosphere.json  ocean_flyover.json  orbit_once.json  orbital_zoom_lod.json  polar_ice_cap.json  stare_at_sun.json  still_5s.json  sunset_sweep.json  terrain_material_preview.json  twilight_directionality.json
crates/app/src/: atmosphere.rs  atmosphere.wgsl  debug.rs  foveated.rs  foveated_debug.wgsl  foveated_unwarp.wgsl  hdr.rs  hdr.wgsl  main.rs  ocean.rs  outmap.rs  planet.rs  planet.wgsl  scenario.rs  shared_planet.wgsl  sun.rs  sun.wgsl  terrain.rs  triangle.wgsl
crates/baker/: Cargo.toml
crates/baker/src/: config.rs  export.rs  grid.rs  lib.rs  main.rs  terrain.rs
crates/baker/tests/: bake.rs
crates/coretypes/: Cargo.toml
crates/coretypes/src/: lib.rs
docs/: HANDOFF.md  foveated_raytrace_dev_guide.md  shared_shader_refactor_plan.md
response/: codex.txt
scripts/: rebake-test-planet.sh
