[workspace]
members = ["crates/app", "crates/baker"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = "0.35"
glam = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"
noise = "0.9"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
wgpu = "29.0"
winit = "0.30.13"
