[package]
name = "catinthegarden-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
pollster.workspace = true
wgpu.workspace = true
winit.workspace = true
