[package]
name = "catinthegarden-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
glam.workspace = true
image.workspace = true
pollster.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
winit.workspace = true
