[package]
name = "catinthegarden-baker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
catinthegarden-coretypes = { path = "../coretypes" }
glam.workspace = true
image.workspace = true
noise.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
